pre-commit test

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,13 @@
 repos:
   - repo: local
     hooks:
-      - id: isort --profile black .
+      - id: isort
         name: Sorting import statements
         entry: bash -c 'isort "$@"; git add -u' --
         language: python
         args: ["--profile", "black", "--filter-files"]
         files: \.py$
-      - id: black .
+      - id: black
         name: Black Python code formatting
         entry: bash -c 'black "$@"; git add -u' --
         language: python
